[tool.poetry]
name = "megaplan-copying-invoices"
version = "0.1.0"
description = ""
authors = ["ZhakovArtyom <127793560+ZhakovArtyom@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
